# Primality-Tester

./: .gitignore  README.md
v1/: __init__.py  pyproject.toml
v1/Tests/: test1.py  utils.py
v1/primey/manager/: __init__.py  v1.py
