[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "primey"
description = "V1 of Primey"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "click",
    "pycodestyle",
    "pydocstyle",
    "pylint",
    "mypy",
    "pytest",
    "pytest-mock",
]

[project.scripts]
primey-manager = "primey.manager.__main__:main"

[tool.setuptools]
packages = ["primey", "primey.manager"]